package dp.structural.bridge;

public interface Color {
    public void applyColor();
}