package dp.structural.bridge;

public class RedColor implements Color {
    public void applyColor() {
        System.out.println("red.");
    }
}